test/error/type/err5.rzy
// fail, use procedure to index array

Err5 = Elementary
  a : Array{10,R{0,10}} = [ 10, 9, 8, 7, 6, 5, 4, 3, 2, 1 ];
  
  out : signal();

  inp : slot()
    return a[out()];
  end
  
end

